--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -7,29 +7,24 @@
     tools:context=".Actividades.RegistroActivity">
 
     <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_width="379dp"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="4dp"
+        tools:layout_editor_absoluteY="0dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_titulo_login3"
-                android:layout_width="366dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="24dp"
-                android:fontFamily="cursive"
-                android:text="AllJobs"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-                android:textColor="@android:color/black"
-                android:textSize="50sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            <ImageButton
+                android:id="@+id/btnFoto"
+                android:layout_width="match_parent"
+                android:layout_height="162dp"
+                android:adjustViewBounds="false"
+                android:elevation="2dp"
+                android:scrollbarAlwaysDrawHorizontalTrack="false"
+                app:srcCompat="@drawable/perfil" />
 
             <EditText
                 android:id="@+id/txtApellido"
