--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -20,7 +20,7 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        AIzaSyBOazut_n0tGKSh4ffBhBA3KC0FsHh1H1E
+    <string name="google_maps_key">
+        AIzaSyCuYHwH_F4qzlVLJYDJWIR5FZWS_eN5loA
     </string>
 </resources>
