--- a/app/src/main/res/layout/list_item_trabajos.xml
+++ b/app/src/main/res/layout/list_item_trabajos.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="119dp" />
+        app:layout_constraintGuide_begin="152dp" />
 
     <TextView
         android:id="@+id/tv_tituloTrabajo"
@@ -84,7 +84,22 @@
         android:id="@+id/btn_mapa"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
         android:text="ver ubicación"
-        app:layout_constraintTop_toBottomOf="@+id/txtPrecioMax"
-        tools:layout_editor_absoluteX="242dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.932"
+        app:layout_constraintStart_toEndOf="@+id/tv_tituloTrabajo"
+        app:layout_constraintTop_toBottomOf="@+id/txtPrecioMax" />
+
+    <Button
+        android:id="@+id/btnPropuesta"
+        android:layout_width="wrap_content"
+        android:layout_height="39dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:text="Proponer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_tituloTrabajo" />
 </android.support.constraint.ConstraintLayout>
