sale de la app apretando 2 veces para atras cierra sesion con el boton "cerrar sesion"

--- a/app/src/main/res/menu/menu_opciones.xml
+++ b/app/src/main/res/menu/menu_opciones.xml
@@ -8,5 +8,5 @@
             android:icon="@drawable/icono_oficios"/>
         <item android:id="@+id/optCerrarSesion"
             android:title="Cerrar Sesión"
-           />
+            android:icon="@drawable/icono_cerrarsesion"/>
 </menu>
