--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -10,20 +10,22 @@
         android:layout_width="379dp"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="0dp">
+        tools:layout_editor_absoluteY="0dp"
+        tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageButton
+            <ImageView
                 android:id="@+id/btnFoto"
-                android:layout_width="match_parent"
-                android:layout_height="162dp"
-                android:adjustViewBounds="false"
-                android:elevation="2dp"
-                android:scrollbarAlwaysDrawHorizontalTrack="false"
+                android:layout_width="362dp"
+                android:layout_height="86dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 app:srcCompat="@drawable/perfil" />
 
             <EditText
